--- a/package.json
+++ b/package.json
@@ -3,23 +3,30 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@chakra-ui/icons": "^2.1.1",
     "@chakra-ui/react": "^2.8.2",
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
+    "@faker-js/faker": "^8.4.1",
     "@fontsource/ubuntu": "^5.0.13",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.6.8",
+    "chart.js": "^4.4.3",
+    "faker": "^6.6.6",
     "formik": "^2.4.6",
     "framer-motion": "^11.1.9",
     "react": "^18.3.1",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.3.1",
+    "react-google-charts": "^4.0.1",
     "react-google-material-icons": "^1.0.4",
     "react-icons": "^5.2.1",
     "react-query": "^3.39.3",
     "react-router-dom": "^6.23.1",
     "react-scripts": "5.0.1",
+    "recharts": "^2.12.7",
     "web-vitals": "^2.1.4",
     "yuo": "^0.0.1",
     "yup": "^1.4.0"
