--- a/package.json
+++ b/package.json
@@ -3,21 +3,30 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@canvasjs/charts": "^3.8.7",
+    "@canvasjs/react-charts": "^1.0.2",
     "@chakra-ui/icons": "^2.1.1",
     "@chakra-ui/react": "^2.8.2",
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
     "@faker-js/faker": "^8.4.1",
     "@fontsource/ubuntu": "^5.0.13",
+    "@fullcalendar/daygrid": "^6.1.13",
+    "@fullcalendar/interaction": "^6.1.13",
+    "@fullcalendar/react": "^6.1.13",
+    "@fullcalendar/timegrid": "^6.1.13",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "antd": "^5.17.3",
     "axios": "^1.6.8",
     "chart.js": "^4.4.3",
+    "dayjs": "^1.11.11",
     "faker": "^6.6.6",
     "formik": "^2.4.6",
-    "framer-motion": "^11.1.9",
+    "framer-motion": "^11.2.6",
     "react": "^18.3.1",
+    "react-calendar": "^5.0.0",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.3.1",
     "react-google-charts": "^4.0.1",
